# spaceavatar

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md
.github/workflows/: ci.yml  persona-eval.yml
agent/: Dockerfile  fly.toml  pyproject.toml
agent/src/commander_sky/: __init__.py  avatar.py  canned.py  config.py  costs.py  logging.py  main.py  metrics.py  models.py  persona.py  safety.py  sky_agent.py  skytools.py
agent/src/commander_sky/facts/: __init__.py  apollo.md  astronauts.md  loader.py  solar_system.md
agent/src/commander_sky/knowledge/: __init__.py  apollo_missions.md  astronaut_life_people.md  early_spaceflight.md  retriever.py  rockets_future.md  shuttle_stations.md  solar_system_deep.md  stars_cosmos.md
agent/tests/: conftest.py  persona_script.yaml  test_canned.py  test_costs.py  test_facts.py  test_knowledge.py  test_models.py  test_no_content_logging.py  test_persona.py  test_persona_script.py  test_pipeline.py  test_safety.py  test_sky_agent.py  test_skytools.py  test_smoke.py
docs/: architecture.md  build-plan.md  compliance.md  deploy.md  research.md  review-report.md
infra/: fly.toml
infra/log-shipper/: fly.toml
web/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/parent/: page.tsx
web/components/: AvatarView.tsx  Captions.tsx  ParentGate.tsx  PushToTalkButton.tsx  SessionExperience.tsx  SpaceOverlay.tsx  ThinkingCue.tsx  TransmissionBoot.tsx
web/e2e/: kid-flow.spec.ts
web/lib/: livekit.ts  ratelimit.ts
(+2 files in other folders)
