[project]
name = "commander-sky"
version = "0.1.0"
description = "Agent worker for Commander Sky — real-time astronaut avatar for kids"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[deepgram,anthropic,cartesia]~=1.6",
    "livekit-plugins-lemonslice>=1.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    # transitive via livekit-agents; floor pinned past GHSA-xf7x-x43h-rpqh
    "json-repair>=0.60.1",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commander_sky"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
